--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,7 @@
 
     <link rel="stylesheet" href="assets/vendor.css">
     <link rel="stylesheet" href="assets/blog-project.css">
+    <link rel="stylesheet" href="assets/animate.css">
 
     {{content-for "head-footer"}}
   </head>
